Updated language files
Danish [da_dk] 87%
French [fr_fr] 78%
German [de_de] 100%
Russian [ru_ru] 82%
Spanish [es_es] 76%
Swedish [sv_se] 68%

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -48,41 +48,10 @@
 	"calamity.forfeit.retracted": "%s has retracted their forfeit vote. %s out of the needed %s players on the team have voted to forfeit the game.",
 	"calamity.forfeit.started": "%s has voted to forfeit the game. %s out of the needed %s players have voted to forfeit. Use [%s] to vote.",
 	"calamity.forfeit": "%s %s has forfeited!",
-	"calamity.goal": "Finish line",
-	"calamity.hover.discord.DinnerPartyGames": "Join Dinner Party Games on Discord",
-	"calamity.hover.moesh.github": "Open github.com\/Moesh",
-	"calamity.hover.moesh.twitter": "Open twitter.com\/HeartlessMoesh",
-	"calamity.hover.sendTriggerCommand": "Click here to send the command to your text box",
-	"calamity.hover.viewGitHub": "Click to view the GitHub repo",
-	"calamity.joined.team": "%s joined %s",
-	"calamity.left.team": "%s left team %s",
-	"calamity.match.cancelled.byPlayer": "%s %s cancelled a match",
-	"calamity.match.cancelled.noPlayers": "At least one player must be on a team to start a match",
-	"calamity.match.cancelled": "Match %s cancelled",
-	"calamity.match.started.byPlayer": "%s %s started a match",
-	"calamity.match.stats": "%1$s to %2$s. %3$s %4$s won by %5$s points in %6$s!",
-	"calamity.notReady": "Not ready",
-	"calamity.out.of.bounds": "Out of bounds!",
-	"calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
-	"calamity.player.sidelined": "%s has been moved to the sidelines. Nothing has been affected. The match continues!",
-	"calamity.points": "+%s points",
-	"spacer.colon": "%s: %s",
-	"calamity.prestige.blueForfeit.blue": "You've kept your dignity",
-	"calamity.prestige.blueForfeit.red": "Blue knew not to mess with you!",
-	"calamity.prestige.lost": "Lost by %s points",
-	"calamity.prestige.redForfeit.blue": "Red gracefully gave up",
-	"calamity.prestige.redForfeit.red": "You'll live to fight again",
-	"calamity.prestige.won": "Won by %s points",
-	"calamity.ready": "Ready",
-	"calamity.reset.map": "Use [%s] to play again.",
-	"calamity.resetItems.alreadyChosen": "You have already chosen to reset your item next time you respawn.",
-	"calamity.resetItems.haventChosen": "You haven't selected an item yet. Nothing to reset.",
-	"calamity.resetItems": "You will get to select a new item the next time you respawn.",
-	"calamity.resetting": "Resetting to default state",
-	"calamity.generator.enchantedItem.announced": "An %s was created by %s %s!",
 	"calamity.generator.enchantedItem.alreadyEnchanted": "Item already has this enchantment.",
 	"calamity.generator.enchantedItem.announced.invalid": "%s %s attempted to enchant an item and failed!",
-	"calamity.generator.enchantedItem.invalid": "No valid item found in main hand.",
+	"calamity.generator.enchantedItem.announced": "An %s was created by %s %s!",
+	"calamity.generator.enchantedItem.invalid": "No valid item found in main hand. Have an %s.",
 	"calamity.generator.enchantedItem.valid": "Valid item found! %s given.",
 	"calamity.generator.output.attackedEffect": "Given [%s%3$s] for %s seconds",
 	"calamity.generator.output.attackEffect": "Sent enemy [%s%3$s] for %s seconds",
@@ -102,6 +71,36 @@
 	"calamity.generator.statusMessage.chargeSeconds": "Charging: %s seconds left",
 	"calamity.generator.statusMessage.resettingSecond": "Resetting: %s second left",
 	"calamity.generator.statusMessage.resettingSeconds": "Resetting: %s seconds left",
+	"calamity.goal": "Finish line",
+	"calamity.hover.discord.DinnerPartyGames": "Join Dinner Party Games on Discord",
+	"calamity.hover.moesh.github": "Open github.com\/Moesh",
+	"calamity.hover.moesh.twitter": "Open twitter.com\/HeartlessMoesh",
+	"calamity.hover.sendTriggerCommand": "Click here to send the command to your text box",
+	"calamity.hover.viewGitHub": "Click to view the GitHub repo",
+	"calamity.joined.team": "%s joined %s",
+	"calamity.left.team": "%s left team %s",
+	"calamity.match.cancelled.byPlayer": "%s %s cancelled a match",
+	"calamity.match.cancelled.noPlayers": "At least one player must be on a team to start a match",
+	"calamity.match.cancelled": "Match %s cancelled",
+	"calamity.match.started.byPlayer": "%s %s started a match",
+	"calamity.match.stats": "%1$s to %2$s. %3$s %4$s won by %5$s points in %6$s!",
+	"calamity.notReady": "Not ready",
+	"calamity.out.of.bounds": "Out of bounds!",
+	"calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
+	"calamity.player.sidelined": "%s has been moved to the sidelines. Nothing has been affected. The match continues!",
+	"calamity.points": "+%s points",
+	"calamity.prestige.blueForfeit.blue": "You've kept your dignity",
+	"calamity.prestige.blueForfeit.red": "Blue knew not to mess with you!",
+	"calamity.prestige.lost": "Lost by %s points",
+	"calamity.prestige.redForfeit.blue": "Red gracefully gave up",
+	"calamity.prestige.redForfeit.red": "You'll live to fight again",
+	"calamity.prestige.won": "Won by %s points",
+	"calamity.ready": "Ready",
+	"calamity.reset.map": "Use [%s] to play again.",
+	"calamity.resetItems.alreadyChosen": "You have already chosen to reset your item next time you respawn.",
+	"calamity.resetItems.haventChosen": "You haven't selected an item yet. Nothing to reset.",
+	"calamity.resetItems": "You will get to select a new item the next time you respawn.",
+	"calamity.resetting": "Resetting to default state",
 	"calamity.seekGlory": "Seek glory or fall to calamity!",
 	"calamity.select.respawnItem": "Select your respawn item by using one of these tools.",
 	"calamity.shuffle.error.noAvailablePlayers": "No players are available to be shuffled.",
@@ -128,6 +127,7 @@
 	"map.author": "Moesh",
 	"map.name": "Calamity",
 	"spacer.brackets.left": " (%s)",
+	"spacer.colon": "%s: %s",
 	"spacer.left": " %s",
 	"spacer.middle": "%s %s",
 	"spacer.or": "%s or %s",
