--- a/resourcepacks/calamity/assets/calamity/lang/es_es.json
+++ b/resourcepacks/calamity/assets/calamity/lang/es_es.json
@@ -1,43 +1,80 @@
 {
+    "arena.calamity.author": "Moesh",
+    "arena.calamity.icon": "z",
+    "arena.calamity.name": "Calamity",
+    "arena.shattering.author": "Moesh",
+    "arena.shattering.icon": "x",
     "arena.shattering.name": "Fragmentaci\u00f3n",
+    "book.pageIndicator": "\u00a7d\u00a7ov5.0.0",
     "by.author": "por %s",
     "calamity.book.cancelStart": "cancelar",
     "calamity.book.forfeit": "Rendirse",
-    "calamity.book.gm": "gm",
     "calamity.book.hover.cancel": "Cancelar partida",
     "calamity.book.hover.forfeit": "Vota para rendirte [\/trigger gg]",
     "calamity.book.hover.joinBlue": "Unirse al equipo Azul",
     "calamity.book.hover.joinRed": "Unirse al equipo Rojo",
-    "calamity.book.hover.leaveTeam.1": "Abandonar equipo",
-    "calamity.book.hover.leaveTeam.2": "Te unir\u00e1s a un equipo aleatorio",
+    "calamity.book.hover.leaveTeam": "Abandonar tu equipo. Te unir\u00e1s a un equipo aleatorio.",
     "calamity.book.hover.notPlaying": "No jugar\u00e1s en la pr\u00f3xima partida",
     "calamity.book.hover.readyTeam": "Indicar si tu equipo est\u00e1 o no est\u00e1 listo",
     "calamity.book.hover.resetSpawnItem": "Volver a escoger con qu\u00e9 objeto reapareces",
-    "calamity.book.hover.start": "Empezar partida despu\u00e9s de 15 segundos",
-    "calamity.book.hover.toggleSpectator.1": "Cambiar entre modo",
-    "calamity.book.hover.toggleSpectator.2": "aventura y creativo",
+    "calamity.book.hover.shuffle.allPlayers": "Shuffle all players, except spectators",
+    "calamity.book.hover.shuffle.restOfPlayers": "Shuffle players who are not on a team",
+    "calamity.book.hover.start": "Empezar partida en 15 segundos",
     "calamity.book.leaveTeam": "Abandona tu equipo",
+    "calamity.book.li.li": "  + ",
+    "calamity.book.li": "\u2022 ",
     "calamity.book.matchOptions.title": "Opciones de partida:",
     "calamity.book.objective.1": "Para obtener puntos, captura recursos, lucha contra tus enemigos o craftea objetos con lingotes de hierro. \u00a1El primer equipo que llegue al objetivo de puntos gana!",
     "calamity.book.objective.2": "Los puntos necesarios para ganar bajan seg\u00fan la cantidad restante de hierro en las minas.",
     "calamity.book.objective.title": "Objetivo:",
-    "calamity.book.randomize.all": "Todo aleatorio",
-    "calamity.book.randomize.rest": "Hacer el resto aleatorio",
     "calamity.book.readyTeam": "Equipo Listo",
     "calamity.book.resetSpawnItem": "Reelige objeto permanente",
     "calamity.book.selectArena.title": "Seleccionar arena: ",
+    "calamity.book.shuffle.all": "todos",
+    "calamity.book.shuffle.rest": "restantes",
+    "calamity.book.shuffle": "Mezclar jugadores:",
     "calamity.book.spectate": "Ser espectador",
     "calamity.book.start": "Empezar",
-    "calamity.book.teams.or": "%s o %s",
     "calamity.book.teams": "Equipo:",
     "calamity.book.title": "Calamity por Moesh",
+    "calamity.book.toggleGamemode.hover": "Cambiar modo de juego entre espectador y aventura",
+    "calamity.book.toggleGamemode": "Modo de juego",
     "calamity.cheated.yourself": "Simplemente no cheatees y listo bro, no es tan dif\u00edcil.",
+    "calamity.click.here": "aqu\u00ed",
+    "calamity.enchanted.item": "Enchanted Item",
     "calamity.feature.notAvailable": "No disponible",
     "calamity.forfeit.draw": "\u00a1Empate!",
-    "calamity.forfeit.retracted.stopped": "%s ha retirado su voto de rendici\u00f3n. Se ha cancelado la votaci\u00f3n",
+    "calamity.forfeit.retracted.stopped": "%s ha retirado su voto de rendici\u00f3n. Se ha cancelado la votaci\u00f3n.",
     "calamity.forfeit.retracted": "%s ha retirado su voto de rendici\u00f3n. %s de los %s jugadores del equipo necesarios han votado a favor de rendirse.",
     "calamity.forfeit.started": "%s ha votado a favor de la rendici\u00f3n. %s de los %s jugadores del equipo necesarios han votado a favor de rendirse. Usa [%s] para votar.",
     "calamity.forfeit": "\u00a1El Equipo %s %s se ha rendido!",
+    "calamity.generator.enchantedItem.alreadyEnchanted": "Item already has this enchantment.",
+    "calamity.generator.enchantedItem.announced.invalid": "%s %s attempted to enchant an item and failed!",
+    "calamity.generator.enchantedItem.announced": "\u00a1Un %s ha sido creado por %s %s!",
+    "calamity.generator.enchantedItem.invalid": "No tienes un objeto encantable en la mano. Toma, un %s.",
+    "calamity.generator.enchantedItem.valid": "\u00a1Objeto encontrado! Has obtenido %s.",
+    "calamity.generator.output.attackedEffect": "Hab\u00e9is recibido [%s%3$s] durante %s segundos",
+    "calamity.generator.output.attackEffect": "El enemigo ha recibido [%s%3$s] durante %s segundos",
+    "calamity.generator.output.effect.level2": " II",
+    "calamity.generator.output.effect": "Hab\u00e9is obtenido [%s%3$s] durante %s segundos",
+    "calamity.generator.output.item": "Has obtenido [%s] * %s",
+    "calamity.generator.sign.activated": "\u00a1Activado!",
+    "calamity.generator.sign.attack": "Ataque de %ss",
+    "calamity.generator.sign.enchant": "Mano principal",
+    "calamity.generator.sign.perPlayer": "%s por jugador",
+    "calamity.generator.sign.perTeam": "%ss por equipo",
+    "calamity.generator.sign.progress": "Cargando: %s%%",
+    "calamity.generator.sign.ready": "Listo",
+    "calamity.generator.sign.resetting": "Reiniciando: %s%%",
+    "calamity.generator.sign.type": "[%s%s]",
+    "calamity.generator.statusMessage.chargeSecond": "Cargando: %s segundo restante",
+    "calamity.generator.statusMessage.chargeSeconds": "Cargando: %s segundos restantes",
+    "calamity.generator.statusMessage.resettingSecond": "Reiniciando: %s segundo restante",
+    "calamity.generator.statusMessage.resettingSeconds": "Reiniciando: %s segundos restantes",
+    "calamity.goal": "L\u00ednea de meta",
+    "calamity.hover.discord.DinnerPartyGames": "Unirse al Discord de Dinner Party Games",
+    "calamity.hover.moesh.github": "Ir a github.com\/Moesh",
+    "calamity.hover.moesh.twitter": "Ir a twitter.com\/HeartlessMoesh",
     "calamity.hover.sendTriggerCommand": "Haz click para mandar el comando a tu chat",
     "calamity.hover.viewGitHub": "Haz click para ver el repositorio en GitHub",
     "calamity.joined.team": "%s se ha unido al Equipo %s",
@@ -49,6 +86,7 @@
     "calamity.match.stats": "%1$s a %2$s. \u00a1El Equipo %3$s %4$s ha ganado por %5$s puntos!",
     "calamity.notReady": "No listo",
     "calamity.out.of.bounds": "\u00a1Est\u00e1s fuera de l\u00edmites!",
+    "calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
     "calamity.player.sidelined": "Han mandado a %s al banquillo. Nada m\u00e1s ha cambiado. \u00a1La partida contin\u00faa!",
     "calamity.points": "%s: +%s puntos",
     "calamity.prestige.blueForfeit.blue": "Hab\u00e9is conservado vuestra dignidad",
@@ -63,26 +101,17 @@
     "calamity.resetItems.haventChosen": "Todav\u00eda no has escogido un objeto.",
     "calamity.resetItems": "Podr\u00e1s reelegir tu objeto la pr\u00f3xima vez que reaparezcas.",
     "calamity.resetting": "Restableciendo el mapa",
-    "calamity.generator.output.attackedEffect": "Hab\u00e9is recibido [%s%3$s] durante %s segundos",
-    "calamity.generator.output.attackEffect": "El enemigo ha recibido [%s%3$s] durante %s segundos",
-    "calamity.generator.output.effect": "Hab\u00e9is obtenido [%s%3$s] durante %s segundos",
-    "calamity.generator.output.item": "Has obtenido [%s] * %s",
-    "calamity.generator.sign.activated": "\u00a1Activado!",
-    "calamity.generator.sign.attack": "Ataque de %ss",
-    "calamity.generator.sign.enchant": "Mano principal",
-    "calamity.generator.sign.perPlayer": "%s por jugador",
-    "calamity.generator.sign.perTeam": "%ss por equipo",
-    "calamity.generator.sign.progress": "Cargando: %s%%",
-    "calamity.generator.sign.ready": "Listo",
-    "calamity.generator.sign.resetting": "Reiniciando: %s%%",
-    "calamity.generator.statusMessage.chargeSecond": "Cargando: %s segundo restante",
-    "calamity.generator.statusMessage.chargeSeconds": "Cargando: %s segundos restantes",
-    "calamity.generator.statusMessage.resettingSecond": "Reiniciando: %s segundo restante",
-    "calamity.generator.statusMessage.resettingSeconds": "Reiniciando: %s segundos restantes",
     "calamity.seekGlory": "\u00a1Buscad gloria ante la calamidad!",
+    "calamity.select.respawnItem": "Selecciona tu objeto permanente usando una de las herramientas.",
+    "calamity.shuffle.error.noAvailablePlayers": "No players are available to be shuffled.",
+    "calamity.shuffle.newTeam": "%s: %s",
+    "calamity.shuffle.newTeamAdditions": "Shuffled to %s: %s",
+    "calamity.shuffle.playerShuffled.all": "%s shuffled all players",
+    "calamity.shuffle.playerShuffled.rest": "%s shuffled players who were not on a team",
     "calamity.sidelines": "%s se ha ido al banquillo",
-    "calamity.startMatch.oneSecond": "La partida \u25b6 empieza en %s segundo",
-    "calamity.startMatch.start": "La partida \u25b6 empieza en %s segundos",
+    "calamity.startMatch.countdown.lastFiveSeconds": "%s...",
+    "calamity.startMatch.countdown": "La partida \u25b6 empieza en %s segundos",
+    "calamity.subtitle.announcer": "Announcer speaks",
     "calamity.subtitle.eye.release": "Ojo abierto",
     "calamity.subtitle.eye.squish": "Ojo pisoteado",
     "calamity.team.notReady.blue": "El equipo %s %s necesita tiempo para pensar %s",
@@ -94,7 +123,18 @@
     "commands.trigger.failed.unprimed": "Ahora mismo no se puede usar este comando",
     "death.attack.outOfWorld": "%1$s sucumbi\u00f3 a la calamidad",
     "map.author.hover.link": "Haz click para ver enlace",
+    "map.author.name": "Moesh",
+    "map.author": "Moesh",
+    "map.name": "Calamity",
+    "spacer.brackets.left": " (%s)",
+    "spacer.colon": "%s: %s",
+    "spacer.left": " %s",
+    "spacer.middle": "%s %s",
+    "spacer.or": "%s o %s",
+    "spacer.right": "%s ",
+    "system.message": ">>> %s",
     "team.blue": "Azul",
     "team.red": "Rojo",
-    "team.spectator": "Espectador"
+    "team.spectator": "Espectador",
+    "translator.name": "Moesh"
 }
