--- a/resourcepacks/calamity/assets/calamity/lang/fr_fr.json
+++ b/resourcepacks/calamity/assets/calamity/lang/fr_fr.json
@@ -9,19 +9,14 @@
     "by.author": "par %s",
     "calamity.book.cancelStart": "annuler",
     "calamity.book.forfeit": "D\u00e9clarer forfait",
-    "calamity.book.gm": "gm",
     "calamity.book.hover.cancel": "annuler le match",
     "calamity.book.hover.forfeit": "Voter afin de terminer le match [\/trigger gg]",
     "calamity.book.hover.joinBlue": "Rejoindre l'\u00e9quipe bleue",
     "calamity.book.hover.joinRed": "Rejoindre l'\u00e9quipe rouge",
-    "calamity.book.hover.leaveTeam.1": "Quitter ton \u00e9quipe",
-    "calamity.book.hover.leaveTeam.2": "Tu peux \u00eatre ajout\u00e9 al\u00e9atoirement \u00e0 une \u00e9quipe",
     "calamity.book.hover.notPlaying": "tu ne jouera pas le prochain match",
     "calamity.book.hover.readyTeam": "Change le statut de ton \u00e9quipe. Le d\u00e9compte d\u00e9marrera lorsque les deux \u00e9quipes seront pr\u00eates.",
     "calamity.book.hover.resetSpawnItem": "Choisir un nouvel objet lors de la r\u00e9apparition",
     "calamity.book.hover.start": "D\u00e9marrer le match apr\u00e8s 15 secondes",
-    "calamity.book.hover.toggleSpectator.1": "Change ton mode de jeu entre",
-    "calamity.book.hover.toggleSpectator.2": "aventure et cr\u00e9atif",
     "calamity.book.leaveTeam": "Quitter l'\u00e9quipe",
     "calamity.book.li.li": "  + ",
     "calamity.book.li": "\u2022 ",
@@ -29,14 +24,11 @@
     "calamity.book.objective.1": "Obtenez des points en r\u00e9cup\u00e9rant des ressources, tuant, ou en fabriquant des objets avec du fer. La premi\u00e8re \u00e9quipe \u00e0 atteindre l'objectif gagne !",
     "calamity.book.objective.2": "Le score de l'objectif r\u00e9duit lorsque la quantit\u00e9 de fer dans les mines r\u00e9duit.",
     "calamity.book.objective.title": "Objectif:",
-    "calamity.book.randomize.all": "Tout al\u00e9atoiriser",
-    "calamity.book.randomize.rest": "Al\u00e9atoiriser le reste",
     "calamity.book.readyTeam": "S'afficher pr\u00eat !",
     "calamity.book.resetSpawnItem": "R\u00e9initialiser l'appartition des objets",
     "calamity.book.selectArena.title": "S\u00e9lectionner l'ar\u00e8ne: ",
     "calamity.book.spectate": "Etre spectateur",
     "calamity.book.start": "D\u00e9marrer",
-    "calamity.book.teams.or": "%s ou %s",
     "calamity.book.teams": "\u00c9quipe:",
     "calamity.book.title": "Calamity par Moesh",
     "calamity.cheated.yourself": "Non seulement tu triches en p\u00e9nalisant le jeu, mais tu te p\u00e9nalises aussi. Tu n'as pas grandi. Tu ne t'es pas am\u00e9lior\u00e9. Tu as pris un raccourci et tu n'as rien gagn\u00e9. Ta victoire est creuse et sans int\u00e9r\u00eat.  Tu n'as rien risqu\u00e9 ni obtenu quoi que ce soit. C'est triste que tu ne vois pas la diff\u00e9rence.",
@@ -46,6 +38,24 @@
     "calamity.forfeit.retracted": "%s a retir\u00e9 son vote pour d\u00e9clarer forfait. %s sur %s joueurs de l'\u00e9quipe ont vot\u00e9 afin de d\u00e9clarer forfait.",
     "calamity.forfeit.started": "%s a vot\u00e9 afin de d\u00e9clarer forfait. %s sur %s joueurs ont d\u00e9clar\u00e9 forfait. Utilise [%s] afin de voter.",
     "calamity.forfeit": "L'\u00e9quipe %s %s a d\u00e9clar\u00e9 forfait!",
+    "calamity.generator.output.attackedEffect": "Application de l'effet [%s%3$s] pendant %s seconds",
+    "calamity.generator.output.attackEffect": "Envoie de l'effet [%s%3$s] \u00e0 l'ennemi pendant %s seconds",
+    "calamity.generator.output.effect.level2": " II",
+    "calamity.generator.output.effect": "Application de l'effet [%s%3$s] pendant %s seconds",
+    "calamity.generator.output.item": "Don de [%s] * %s",
+    "calamity.generator.sign.activated": "Activ\u00e9 !",
+    "calamity.generator.sign.attack": "%s sec. attaque",
+    "calamity.generator.sign.enchant": "Pour la main principale",
+    "calamity.generator.sign.perPlayer": "%s par joueur",
+    "calamity.generator.sign.perTeam": "%s sec. pour l'\u00e9quipe",
+    "calamity.generator.sign.progress": "Chargement: %s%%",
+    "calamity.generator.sign.ready": "Pr\u00eat",
+    "calamity.generator.sign.resetting": "R\u00e9initialisation: %s%%",
+    "calamity.generator.sign.type": "[%s%s]",
+    "calamity.generator.statusMessage.chargeSecond": "Chargement: %s seconde restante",
+    "calamity.generator.statusMessage.chargeSeconds": "Chargement: %s secondes restantes",
+    "calamity.generator.statusMessage.resettingSecond": "R\u00e9initialisation: %s seconde restante",
+    "calamity.generator.statusMessage.resettingSeconds": "R\u00e9initialisation: %s secondes restantes",
     "calamity.hover.sendTriggerCommand": "Clique ici afin d'envoyer la commande dans le chat",
     "calamity.hover.viewGitHub": "Clique ici afin de visiter le GitHub repo",
     "calamity.joined.team": "%s a rejoins l'\u00e9quipe %s",
@@ -71,29 +81,10 @@
     "calamity.resetItems.haventChosen": "Tu n'as pas encore s\u00e9lectionn\u00e9 d'objet. Rien \u00e0 r\u00e9initialiser.",
     "calamity.resetItems": "Tu seras autoris\u00e9 \u00e0 choisir un nouvel objet par d\u00e9faut lors de ta prochaine r\u00e9apparition.",
     "calamity.resetting": "R\u00e9initialisation aux param\u00e8tres par d\u00e9faut",
-    "calamity.generator.output.attackedEffect": "Application de l'effet [%s%3$s] pendant %s seconds",
-    "calamity.generator.output.attackEffect": "Envoie de l'effet [%s%3$s] \u00e0 l'ennemi pendant %s seconds",
-    "calamity.generator.output.effect.level2": " II",
-    "calamity.generator.output.effect": "Application de l'effet [%s%3$s] pendant %s seconds",
-    "calamity.generator.output.item": "Don de [%s] * %s",
-    "calamity.generator.sign.activated": "Activ\u00e9 !",
-    "calamity.generator.sign.attack": "%s sec. attaque",
-    "calamity.generator.sign.enchant": "Pour la main principale",
-    "calamity.generator.sign.perPlayer": "%s par joueur",
-    "calamity.generator.sign.perTeam": "%s sec. pour l'\u00e9quipe",
-    "calamity.generator.sign.progress": "Chargement: %s%%",
-    "calamity.generator.sign.ready": "Pr\u00eat",
-    "calamity.generator.sign.resetting": "R\u00e9initialisation: %s%%",
-    "calamity.generator.sign.type": "[%s%s]",
-    "calamity.generator.statusMessage.chargeSecond": "Chargement: %s seconde restante",
-    "calamity.generator.statusMessage.chargeSeconds": "Chargement: %s secondes restantes",
-    "calamity.generator.statusMessage.resettingSecond": "R\u00e9initialisation: %s seconde restante",
-    "calamity.generator.statusMessage.resettingSeconds": "R\u00e9initialisation: %s secondes restantes",
     "calamity.seekGlory": "Rejoins la gloire ou tombe dans la calamit\u00e9 !",
     "calamity.sidelines": "%s a rejoins les gradins",
-    "calamity.startMatch.last5seconds": "%s...",
-    "calamity.startMatch.oneSecond": "Match \u25b6 D\u00e9but dans %s seconde",
-    "calamity.startMatch.start": "Match \u25b6 D\u00e9but dans %s secondes",
+    "calamity.startMatch.countdown.lastFiveSeconds": "%s...",
+    "calamity.startMatch.countdown": "Match \u25b6 D\u00e9but dans %s secondes",
     "calamity.subtitle.eye.release": "Oeil ouvert",
     "calamity.subtitle.eye.squish": "Oeil \u00e9cras\u00e9",
     "calamity.team.notReady.blue": "L'\u00e9quipe %s %s a besoin d'un moment %s",
@@ -111,6 +102,7 @@
     "spacer.brackets.left": " (%s)",
     "spacer.left": " %s",
     "spacer.middle": "%s %s",
+    "spacer.or": "%s ou %s",
     "spacer.right": "%s ",
     "system.message": ">>> %s",
     "team.blue": "Bleu",
