--- a/resourcepacks/calamity/assets/calamity/lang/sv_se.json
+++ b/resourcepacks/calamity/assets/calamity/lang/sv_se.json
@@ -11,27 +11,20 @@
     "calamity.book.hover.forfeit": "R\u00f6sta f\u00f6r att avsluta matchen [\/trigger gg]",
     "calamity.book.hover.joinBlue": "G\u00e5 med i Bl\u00e5tt lag",
     "calamity.book.hover.joinRed": "G\u00e5 med i R\u00f6tt lag",
-    "calamity.book.hover.leaveTeam.1": "L\u00e4mna ditt lag",
-    "calamity.book.hover.leaveTeam.2": "Du kan randomiseras till ett lag",
     "calamity.book.hover.notPlaying": "Du kommer inte att spela n\u00e4sta match",
     "calamity.book.hover.readyTeam": "\u00c4ndra ditt lags redo-l\u00e4ge. Nedr\u00e4kningen f\u00f6r matchen p\u00e5b\u00f6rjas n\u00e4r b\u00e4gge lagen \u00e4r redo.",
     "calamity.book.hover.resetSpawnItem": "V\u00e4lj ett nytt respawn-f\u00f6rem\u00e5l n\u00e4r du respawnar",
     "calamity.book.hover.start": "Starta match efter 15 sekunder",
-    "calamity.book.hover.toggleSpectator.1": "V\u00e4xla spell\u00e4ge mellan",
-    "calamity.book.hover.toggleSpectator.2": "\u00e4ventyr och kreativ",
     "calamity.book.leaveTeam": "L\u00e4mna lag",
     "calamity.book.matchOptions.title": "Matchinst\u00e4llningar",
     "calamity.book.objective.1": "Erh\u00e5ll po\u00e4ng genom att samla resurser, d\u00f6da, eller skapa f\u00f6rem\u00e5l med j\u00e4rntackor. Det lag som f\u00f6rst n\u00e5r m\u00e5let vinner!",
     "calamity.book.objective.2": "M\u00e5let s\u00e4nks n\u00e4r en j\u00e4rntacka avl\u00e4gsnas fr\u00e5n gruvorna i mitten.",
     "calamity.book.objective.title": "M\u00e5l:",
-    "calamity.book.randomize.all": "Randomisera allt",
-    "calamity.book.randomize.rest": "Randomisera resten",
     "calamity.book.readyTeam": "\u00c4ndra redo-l\u00e4ge",
     "calamity.book.resetSpawnItem": "\u00c5terst\u00e4ll spawn-f\u00f6rem\u00e5l",
     "calamity.book.selectArena.title": "V\u00e4lj arena",
     "calamity.book.spectate": "Titta",
     "calamity.book.start": "Starta",
-    "calamity.book.teams.or": "%s eller %s",
     "calamity.book.teams": "Lag",
     "calamity.book.title": "Calamity av Moesh",
     "calamity.cheated.yourself": "Du har inte bara lurat spelet, du har lurat dig sj\u00e4lv. Du utvecklades inte och du blev inte b\u00e4ttre. Du tog den enkla v\u00e4gen och l\u00e4rde dig inget. En betydelsel\u00f6s seger utan risker och nya erfarenheter. Det \u00e4r sorgligt att du inte f\u00f6rst\u00e5r skillnaden.",
@@ -41,6 +34,19 @@
     "calamity.forfeit.retracted": "%s har dragit tillbaka sin r\u00f6st. %s av de %s r\u00f6ster som beh\u00f6vs p\u00e5 laget har r\u00f6stat f\u00f6r att ge upp matchen.",
     "calamity.forfeit.started": "%s har r\u00f6stat f\u00f6r att ge upp matchen. %s av de %s r\u00f6ster som beh\u00f6vs har r\u00f6stat f\u00f6r att ge upp. Anv\u00e4nd [%s] f\u00f6r att r\u00f6sta.",
     "calamity.forfeit": "%s %s har gett upp!",
+    "calamity.generator.output.attackEffect": "Skickade motst\u00e5ndare [%s%3$s] i %s sekunder",
+    "calamity.generator.sign.activated": "Aktiverat!",
+    "calamity.generator.sign.enchant": "F\u00f6r huvudgrepp",
+    "calamity.generator.sign.perPlayer": "%s per spelare",
+    "calamity.generator.sign.perTeam": "%s sec. till laget",
+    "calamity.generator.sign.progress": "Laddar: %s%%",
+    "calamity.generator.sign.ready": "Redo",
+    "calamity.generator.sign.resetting": "\u00c5terst\u00e4ller: %s%%",
+    "calamity.generator.sign.type": "[%s%s]",
+    "calamity.generator.statusMessage.chargeSecond": "Laddar: %s sekund kvar",
+    "calamity.generator.statusMessage.chargeSeconds": "Laddar: %s sekunder kvar",
+    "calamity.generator.statusMessage.resettingSecond": "\u00c5terst\u00e4ller: %s sekund kvar",
+    "calamity.generator.statusMessage.resettingSeconds": "\u00c5terst\u00e4ller: %s sekunder kvar",
     "calamity.hover.sendTriggerCommand": "Tryck h\u00e4r f\u00f6r att skicka kommandot till din textbox",
     "calamity.hover.viewGitHub": "Tryck h\u00e4r f\u00f6r att se GitHub-repon",
     "calamity.joined.team": "%s ansl\u00f6t till %s",
@@ -66,23 +72,9 @@
     "calamity.resetItems.haventChosen": "Inget att \u00e5terst\u00e4lla. Du har \u00e4nnu inte valt n\u00e5got f\u00f6rem\u00e5l.",
     "calamity.resetItems": "Du f\u00e5r kommer att f\u00e5 v\u00e4lja ett nytt f\u00f6rem\u00e5l vid n\u00e4sta respawn-tillf\u00e4lle.",
     "calamity.resetting": "\u00c5terst\u00e4ller till standardl\u00e4ge",
-    "calamity.generator.output.attackEffect": "Skickade motst\u00e5ndare [%s%3$s] i %s sekunder",
-    "calamity.generator.sign.activated": "Aktiverat!",
-    "calamity.generator.sign.enchant": "F\u00f6r huvudgrepp",
-    "calamity.generator.sign.perPlayer": "%s per spelare",
-    "calamity.generator.sign.perTeam": "%s sec. till laget",
-    "calamity.generator.sign.progress": "Laddar: %s%%",
-    "calamity.generator.sign.ready": "Redo",
-    "calamity.generator.sign.resetting": "\u00c5terst\u00e4ller: %s%%",
-    "calamity.generator.sign.type": "[%s%s]",
-    "calamity.generator.statusMessage.chargeSecond": "Laddar: %s sekund kvar",
-    "calamity.generator.statusMessage.chargeSeconds": "Laddar: %s sekunder kvar",
-    "calamity.generator.statusMessage.resettingSecond": "\u00c5terst\u00e4ller: %s sekund kvar",
-    "calamity.generator.statusMessage.resettingSeconds": "\u00c5terst\u00e4ller: %s sekunder kvar",
     "calamity.sidelines": "%s f\u00f6rflyttades till sidlinjen",
-    "calamity.startMatch.last5seconds": "%s...",
-    "calamity.startMatch.oneSecond": "Matchen \u25b6 b\u00f6rjar om %s sekund",
-    "calamity.startMatch.start": "Matchen \u25b6 b\u00f6rjar om %s sekunder",
+    "calamity.startMatch.countdown.lastFiveSeconds": "%s...",
+    "calamity.startMatch.countdown": "Matchen \u25b6 b\u00f6rjar om %s sekunder",
     "calamity.subtitle.eye.release": "\u00d6ga \u00f6ppnat",
     "calamity.subtitle.eye.squish": "\u00d6ga kl\u00e4mt",
     "calamity.team.notReady.blue": "%s %s beh\u00f6ver ett \u00f6gonblick %s",
@@ -97,6 +89,7 @@
     "map.author.name": "Moesh",
     "map.author": "Moesh",
     "map.name": "Calamity",
+    "spacer.or": "%s eller %s",
     "team.blue": "Bl\u00e5",
     "team.red": "R\u00f6d",
     "team.spectator": "\u00c5sk\u00e5dare"
