--- a/resourcepacks/calamity/assets/calamity/lang/de_de.json
+++ b/resourcepacks/calamity/assets/calamity/lang/de_de.json
@@ -1,127 +1,140 @@
 {
-    "arena.calamity.author":"Moesh",
-    "arena.calamity.icon":"z",
-    "arena.calamity.name":"Calamity",
-    "arena.shattering.author":"Moesh",
-    "arena.shattering.icon":"x",
-    "arena.shattering.name":"Shattering",
-    "book.pageIndicator":"\u00a7d\u00a7ov5.0.0",
-    "by.author":"von %s",
-    "calamity.book.cancelStart":"Abbruch",
-    "calamity.book.forfeit":"Aufgeben",
-    "calamity.book.hover.cancel":"Spiel abbrechen",
-    "calamity.book.hover.forfeit":"Stimme daf\u00fcr das Spiel aufzugeben [%s]",
-    "calamity.book.hover.joinBlue":"Tritt Team Blau bei",
-    "calamity.book.hover.joinRed":"Tritt Team Rot bei",
-    "calamity.book.hover.leaveTeam":"Team verlassen. Du kannst trotzdem noch in ein Team gemischt werden.",
-    "calamity.book.hover.notPlaying":"Du wirst am n\u00e4chstem Spiel nicht teilnehmen",
-    "calamity.book.hover.readyTeam":"Schalte den Bereitschaftsstatus deins Teams um. Der Countdown beginnt, wenn beide Teams bereit sind.",
-    "calamity.book.hover.resetSpawnItem":"W\u00e4hle ein neues respawn Item wenn du respawnst",
-    "calamity.book.hover.start":"Startet ein Spiel nach 15 Sekunden",
-    "calamity.book.leaveTeam":"Team verlassen",
-    "calamity.book.li.li":"  + ",
-    "calamity.book.li":"\u2022 ",
-    "calamity.book.matchOptions.title":"Spieloptionen:",
-    "calamity.book.objective.1":"Sammle Punkte indem du Ressourcen sammelst, t\u00f6test oder Items mit Eisenbarren herstellst. Das erste Team, dass das Punkteziel erreicht, gewinnt!",
-    "calamity.book.objective.2":"Das Punkteziel wird verringert, wenn Eisenerz aus den Minen entfernt wird.",
-    "calamity.book.objective.title":"Ziel:",
-    "calamity.book.readyTeam":"Team ist bereit",
-    "calamity.book.resetSpawnItem":"Setze das",
-    "calamity.book.selectArena.title":"Arena ausw\u00e4hlen: ",
-    "calamity.book.shuffle.all":"Alle",
-    "calamity.book.shuffle.rest":"Rest",
-    "calamity.book.shuffle":"Spieler mischen:",
-    "calamity.book.spectate":"Zuschauen",
-    "calamity.book.start":"Start",
-    "calamity.book.teams":"Team:",
-    "calamity.book.title":"Calamity von Moesh",
-    "calamity.book.toggleGamemode.hover":"Zwischen Zuschauer und Abentuer Spielmodus wechseln",
-    "calamity.book.toggleGamemode":"Spielmodus",
-    "calamity.cheated.yourself":"Du hast nicht nur im Spiel betrogen, sondern auch dich selbst. Du bist nicht reifer geworden. Du hast dich nicht gebessert. Du hast eine Abk\u00fcrzung genommen und nichts erreicht. Du hast einen bedeutungslosen Sieg erfahren. Nichts wurde riskiert und nichts erreicht. Es ist traurig, dass du den Unterschied nicht kennst.",
-    "calamity.click.here":"hier",
-    "calamity.feature.notAvailable":"Nicht verf\u00fcgbar",
-    "calamity.forfeit.draw":"Es ist unentschieden!",
-    "calamity.forfeit.retracted.stopped":"%s hat seine Stimme f\u00fcr eine Aufgabe zur\u00fcckgezogen. Abstimmung gestoppt.",
-    "calamity.forfeit.retracted":"%s hat seine Stimme f\u00fcr eine Aufgabe zur\u00fcckgezogen. %s von ben\u00f6tigten %s Spielern eines Teams haben f\u00fcr eine Aufgabe gestimmt.",
-    "calamity.forfeit.started":"%s hat f\u00fcr eine Aufgabe gestimmt. %s von ben\u00f6tigten %s Spielern haben f\u00fcr eine Aufgabe gestimmt. Nutze [%s] um abzustimmen.",
-    "calamity.forfeit":"%s %s hat aufgegeben!",
-    "calamity.goal":"Ziellinie",
-    "calamity.hover.discord.DinnerPartyGames":"Tritt dem Dinner Party Games Discord bei",
-    "calamity.hover.moesh.github":"github.com\/Moesh \u00f6ffnen",
-    "calamity.hover.moesh.twitter":"twitter.com\/HeartlessMoesh \u00f6ffnen",
-    "calamity.hover.sendTriggerCommand":"Klicke hier, um diesen Befehl im Chat auszuf\u00fchren",
-    "calamity.hover.viewGitHub":"Klicke hier um das GitHub Repository zu besuchen",
-    "calamity.joined.team":"%s ist Team %s beigetreten",
-    "calamity.left.team":"%s hat die Hoffnung aufgegeben",
-    "calamity.match.cancelled.byPlayer":"%s %s hat das Spiel abgebrochen",
-    "calamity.match.cancelled.noPlayers":"Es muss mindestens ein Spieler in einem Team sein um ein Spiel zu beginnen",
-    "calamity.match.cancelled":"Spiel %s abgebrochen",
-    "calamity.match.started.byPlayer":"%s %s hat ein Spiel gestartet",
-    "calamity.match.stats":"%1$s zu %2$s. %3$s %4$s hat mit %5$s Punkten in %6$s gewonnen!",
-    "calamity.notReady":"Nicht bereit",
-    "calamity.out.of.bounds":"Au\u00dferhalb des Spielbereichs!",
-    "calamity.player.sidelined":"%s ist nun ein Zuschauer. Es wurde nichts beeinflusst. Das Spiel geht weiter!",
-    "calamity.points":"%s: +%s Punkte",
-    "calamity.prestige.blueForfeit.blue":"Du hast deine W\u00fcrde bewahrt",
-    "calamity.prestige.blueForfeit.red":"Team Blau wusste, dass sie sich nicht mit dir anlegen sollten!",
-    "calamity.prestige.lost":"Um %s Punkte verloren",
-    "calamity.prestige.redForfeit.blue":"Rot hat aufgegeben",
-    "calamity.prestige.redForfeit.red":"Du \u00fcberlebst um erneut zu k\u00e4mpfen",
-    "calamity.prestige.won":"Mit %s Punkten Abstand gewonnen",
-    "calamity.ready":"Bereit",
-    "calamity.reset.map":"Nutze [%s] um noch einmal zu spielen.",
-    "calamity.resetItems.alreadyChosen":"Du hast bereits ausgew\u00e4hlt das dein Item zur\u00fcckgesetzt wird sobald du das n\u00e4chste Mal respawnst.",
-    "calamity.resetItems.haventChosen":"Du hast noch kein Item ausgew\u00e4hlt, also kann es nicht zur\u00fcckgesetzt werden.",
-    "calamity.resetItems":"Wenn du das n\u00e4chste mal respawnst, kannst du ein neues Item ausw\u00e4hlen.",
-    "calamity.resetting":"Wird in den Standardzustand zur\u00fcckgesetzt",
-    "calamity.generator.enchantedItem.announced":"Ein %s wurde von %s %s erstellt!",
-    "calamity.generator.enchantedItem.invalid":"Kein g\u00fcltiges Item in der Haupthand gefunden. Nimm ein %s.",
-    "calamity.generator.enchantedItem.valid":"G\u00fcltiges Item gefunden! %s gegeben.",
-    "calamity.generator.output.attackedEffect":"[%s%3$s] f\u00fcr %s Sekunden gegeben",
-    "calamity.generator.output.attackEffect":"[%s%3$s] f\u00fcr %s an die Gegner geschickt",
-    "calamity.generator.output.effect.level2":" II",
-    "calamity.generator.output.effect":"[%s%3$s] f\u00fcr %s Sekunden erhalten",
-    "calamity.generator.output.item":"[%s] * %s erhalten",
-    "calamity.generator.sign.activated":"Aktiviert!",
-    "calamity.generator.sign.attack":"%ss f\u00fcr Gegner",
-    "calamity.generator.sign.enchant":"F\u00fcr die Haupthand",
-    "calamity.generator.sign.perPlayer":"%s pro Spieler",
-    "calamity.generator.sign.perTeam":"%ss f\u00fcr Team",
-    "calamity.generator.sign.progress":"L\u00e4dt: %s%%",
-    "calamity.generator.sign.ready":"Bereit",
-    "calamity.generator.sign.resetting":"Resettet: %s%%",
-    "calamity.generator.sign.type":"[%s%s]",
-    "calamity.generator.statusMessage.chargeSecond":"L\u00e4dt: %s Sekunde \u00fcbrig",
-    "calamity.generator.statusMessage.chargeSeconds":"L\u00e4dt: %s Sekunden \u00fcbrig",
-    "calamity.generator.statusMessage.resettingSecond":"Resettet: %ss \u00fcbrig",
-    "calamity.generator.statusMessage.resettingSeconds":"Resettet: %ss \u00fcbrig",
-    "calamity.seekGlory":"Suche den Ruhm oder st\u00fcrze ins Ungl\u00fcck!",
-    "calamity.select.respawnItem":"W\u00e4hle dein Respawn-Item indem du eines dieser Werkzeuge benutzt.",
-    "calamity.sidelines":"%s ist nun Zuschauer",
-    "calamity.startMatch.countdown.lastFiveSeconds":"%s...",
-    "calamity.startMatch.countdown":"Spiel \u25b6 beginnt in %s Sekunden",
-    "calamity.subtitle.eye.release":"Auge ge\u00f6ffnet",
-    "calamity.subtitle.eye.squish":"Auge zerquetscht",
-    "calamity.team.notReady.blue":"%s %s braucht noch einen Augenblick %s",
-    "calamity.team.notReady.red":"%s %s sagt Momentchen noch %s",
-    "calamity.team.ready":"%s %s ist bereit %s",
-    "calamity.troll":"%s ist in das Troll-Loch gefallen! Wie peinlich!",
-    "calamity.welcome.objective":"Ziel: Sammle gen\u00fcgend Punkte um das Punkteziel zu erreichen. Klicke %s, um Online zus\u00e4tzliche Informationen zu erhalten!",
-    "calamity.welcome":"Willkomen bei Calamity: Definitive Edition! Erstellt von Moesh.",
-    "commands.trigger.failed.unprimed":"Du kannst diesen Befehl im Moment nicht verwenden",
-    "death.attack.outOfWorld":"%1$s ist dem Unheil zum Opfer gefallen",
-    "map.author.hover.link":"Klicke um den Link anzuzeigen",
-    "map.author.name":"Moesh",
-    "map.author":"Moesh",
-    "map.name":"Calamity",
-    "spacer.brackets.left":" (%s)",
-    "spacer.left":" %s",
-    "spacer.middle":"%s %s",
-    "spacer.or":"%s oder %s",
-    "spacer.right":"%s ",
-    "system.message":">>> %s",
-    "team.blue":"Blau",
-    "team.red":"Rot",
-    "team.spectator":"Zuschauer",
-    "translator.name":"McTsts, Plagiatus"
+    "arena.calamity.author": "Moesh",
+    "arena.calamity.icon": "z",
+    "arena.calamity.name": "Calamity",
+    "arena.shattering.author": "Moesh",
+    "arena.shattering.icon": "x",
+    "arena.shattering.name": "Shattering",
+    "book.pageIndicator": "\u00a7d\u00a7ov5.0.0",
+    "by.author": "von %s",
+    "calamity.book.cancelStart": "Abbruch",
+    "calamity.book.forfeit": "Aufgeben",
+    "calamity.book.hover.cancel": "Spiel abbrechen",
+    "calamity.book.hover.forfeit": "Stimme daf\u00fcr das Spiel aufzugeben [%s]",
+    "calamity.book.hover.joinBlue": "Tritt Team Blau bei",
+    "calamity.book.hover.joinRed": "Tritt Team Rot bei",
+    "calamity.book.hover.leaveTeam": "Team verlassen. Du kannst trotzdem noch in ein Team gemischt werden.",
+    "calamity.book.hover.notPlaying": "Du wirst am n\u00e4chstem Spiel nicht teilnehmen",
+    "calamity.book.hover.readyTeam": "Schalte den Bereitschaftsstatus deins Teams um. Der Countdown beginnt, wenn beide Teams bereit sind.",
+    "calamity.book.hover.resetSpawnItem": "W\u00e4hle ein neues respawn Item wenn du respawnst",
+    "calamity.book.hover.shuffle.allPlayers": "Mischen alle Spieler, au\u00dfer Zuschauer",
+    "calamity.book.hover.shuffle.restOfPlayers": "Mischen alle Spieler, die nicht in einem Team sind",
+    "calamity.book.hover.start": "Startet ein Spiel nach 15 Sekunden",
+    "calamity.book.leaveTeam": "Team verlassen",
+    "calamity.book.li.li": "  + ",
+    "calamity.book.li": "\u2022 ",
+    "calamity.book.matchOptions.title": "Spieloptionen:",
+    "calamity.book.objective.1": "Sammle Punkte indem du Ressourcen sammelst, t\u00f6test oder Items mit Eisenbarren herstellst. Das erste Team, dass das Punkteziel erreicht, gewinnt!",
+    "calamity.book.objective.2": "Das Punkteziel wird verringert, wenn Eisenerz aus den Minen entfernt wird.",
+    "calamity.book.objective.title": "Ziel:",
+    "calamity.book.readyTeam": "Team ist bereit",
+    "calamity.book.resetSpawnItem": "Setze das",
+    "calamity.book.selectArena.title": "Arena ausw\u00e4hlen: ",
+    "calamity.book.shuffle.all": "Alle",
+    "calamity.book.shuffle.rest": "Rest",
+    "calamity.book.shuffle": "Spieler mischen:",
+    "calamity.book.spectate": "Zuschauen",
+    "calamity.book.start": "Start",
+    "calamity.book.teams": "Team:",
+    "calamity.book.title": "Calamity von Moesh",
+    "calamity.book.toggleGamemode.hover": "Zwischen Zuschauer und Abentuer Spielmodus wechseln",
+    "calamity.book.toggleGamemode": "Spielmodus",
+    "calamity.cheated.yourself": "Du hast nicht nur im Spiel betrogen, sondern auch dich selbst. Du bist nicht reifer geworden. Du hast dich nicht gebessert. Du hast eine Abk\u00fcrzung genommen und nichts erreicht. Du hast einen bedeutungslosen Sieg erfahren. Nichts wurde riskiert und nichts erreicht. Es ist traurig, dass du den Unterschied nicht kennst.",
+    "calamity.click.here": "hier",
+    "calamity.enchanted.item": "Verzauberter Gegenstand",
+    "calamity.feature.notAvailable": "Nicht verf\u00fcgbar",
+    "calamity.forfeit.draw": "Es ist unentschieden!",
+    "calamity.forfeit.retracted.stopped": "%s hat die Stimme f\u00fcr eine Aufgabe zur\u00fcckgezogen. Abstimmung gestoppt.",
+    "calamity.forfeit.retracted": "%s hat die Stimme f\u00fcr eine Aufgabe zur\u00fcckgezogen. %s von ben\u00f6tigten %s Spielern eines Teams haben f\u00fcr eine Aufgabe gestimmt.",
+    "calamity.forfeit.started": "%s hat f\u00fcr eine Aufgabe gestimmt. %s von ben\u00f6tigten %s Spielern haben f\u00fcr eine Aufgabe gestimmt. Nutze [%s] um abzustimmen.",
+    "calamity.forfeit": "%s %s hat aufgegeben!",
+    "calamity.generator.enchantedItem.alreadyEnchanted": "Das Item hat bereits diese Verzauberung.",
+    "calamity.generator.enchantedItem.announced.invalid": "%s %s hat versucht ein Item zu verzaubern und ist dabei gescheitert!",
+    "calamity.generator.enchantedItem.announced": "Ein %s wurde von %s %s erstellt!",
+    "calamity.generator.enchantedItem.invalid": "Kein g\u00fcltiges Item in der Haupthand gefunden. Nimm ein %s.",
+    "calamity.generator.enchantedItem.valid": "G\u00fcltiges Item gefunden! %s gegeben.",
+    "calamity.generator.output.attackedEffect": "[%s%3$s] f\u00fcr %s Sekunden gegeben",
+    "calamity.generator.output.attackEffect": "[%s%3$s] f\u00fcr %s an die Gegner geschickt",
+    "calamity.generator.output.effect.level2": " II",
+    "calamity.generator.output.effect": "[%s%3$s] f\u00fcr %s Sekunden erhalten",
+    "calamity.generator.output.item": "[%s] * %s erhalten",
+    "calamity.generator.sign.activated": "Aktiviert!",
+    "calamity.generator.sign.attack": "%ss f\u00fcr Gegner",
+    "calamity.generator.sign.enchant": "F\u00fcr die Haupthand",
+    "calamity.generator.sign.perPlayer": "%s pro Spieler",
+    "calamity.generator.sign.perTeam": "%ss f\u00fcr Team",
+    "calamity.generator.sign.progress": "L\u00e4dt: %s%%",
+    "calamity.generator.sign.ready": "Bereit",
+    "calamity.generator.sign.resetting": "Resettet: %s%%",
+    "calamity.generator.sign.type": "[%s%s]",
+    "calamity.generator.statusMessage.chargeSecond": "L\u00e4dt: %s Sekunde \u00fcbrig",
+    "calamity.generator.statusMessage.chargeSeconds": "L\u00e4dt: %s Sekunden \u00fcbrig",
+    "calamity.generator.statusMessage.resettingSecond": "Resettet: %ss \u00fcbrig",
+    "calamity.generator.statusMessage.resettingSeconds": "Resettet: %ss \u00fcbrig",
+    "calamity.goal": "Ziellinie",
+    "calamity.hover.discord.DinnerPartyGames": "Tritt dem Dinner Party Games Discord bei",
+    "calamity.hover.moesh.github": "github.com\/Moesh \u00f6ffnen",
+    "calamity.hover.moesh.twitter": "twitter.com\/HeartlessMoesh \u00f6ffnen",
+    "calamity.hover.sendTriggerCommand": "Klicke hier, um diesen Befehl im Chat auszuf\u00fchren",
+    "calamity.hover.viewGitHub": "Klicke hier um das GitHub Repository zu besuchen",
+    "calamity.joined.team": "%s ist Team %s beigetreten",
+    "calamity.left.team": "%s hat Team %s verlassen",
+    "calamity.match.cancelled.byPlayer": "%s %s hat das Spiel abgebrochen",
+    "calamity.match.cancelled.noPlayers": "Es muss mindestens ein Spieler in einem Team sein um ein Spiel zu beginnen",
+    "calamity.match.cancelled": "Spiel %s abgebrochen",
+    "calamity.match.started.byPlayer": "%s %s hat ein Spiel gestartet",
+    "calamity.match.stats": "%1$s zu %2$s. %3$s %4$s hat mit %5$s Punkten in %6$s gewonnen!",
+    "calamity.notReady": "Nicht bereit",
+    "calamity.out.of.bounds": "Au\u00dferhalb des Spielbereichs!",
+    "calamity.player.sessionID.mismatch": "SessionID stimmt nicht \u00fcberein. Du wirst als neuer Spieler angesehen.",
+    "calamity.player.sidelined": "%s ist nun ein Zuschauer. Es wurde nichts beeinflusst. Das Spiel geht weiter!",
+    "calamity.points": "+%s Punkte",
+    "calamity.prestige.blueForfeit.blue": "Du hast deine W\u00fcrde bewahrt",
+    "calamity.prestige.blueForfeit.red": "Team Blau wusste, dass sie sich nicht mit dir anlegen sollten!",
+    "calamity.prestige.lost": "Um %s Punkte verloren",
+    "calamity.prestige.redForfeit.blue": "Rot hat aufgegeben",
+    "calamity.prestige.redForfeit.red": "Du \u00fcberlebst um erneut zu k\u00e4mpfen",
+    "calamity.prestige.won": "Mit %s Punkten Abstand gewonnen",
+    "calamity.ready": "Bereit",
+    "calamity.reset.map": "Nutze [%s] um noch einmal zu spielen.",
+    "calamity.resetItems.alreadyChosen": "Du hast bereits ausgew\u00e4hlt das dein Item zur\u00fcckgesetzt wird sobald du das n\u00e4chste Mal respawnst.",
+    "calamity.resetItems.haventChosen": "Du hast noch kein Item ausgew\u00e4hlt, also kann es nicht zur\u00fcckgesetzt werden.",
+    "calamity.resetItems": "Wenn du das n\u00e4chste mal respawnst, kannst du ein neues Item ausw\u00e4hlen.",
+    "calamity.resetting": "Wird in den Standardzustand zur\u00fcckgesetzt",
+    "calamity.seekGlory": "Suche den Ruhm oder st\u00fcrze ins Ungl\u00fcck!",
+    "calamity.select.respawnItem": "W\u00e4hle dein Respawn-Item indem du eines dieser Werkzeuge benutzt.",
+    "calamity.shuffle.error.noAvailablePlayers": "Es sind keine Spieler zum Mischen verf\u00fcgbar.",
+    "calamity.shuffle.newTeam": "%s: %s",
+    "calamity.shuffle.newTeamAdditions": "In %s gemischt: %s",
+    "calamity.shuffle.playerShuffled.all": "%s hat alle Spieler gemischt",
+    "calamity.shuffle.playerShuffled.rest": "%s hat alle Spieler gemischt, die nicht in einen Team sind",
+    "calamity.sidelines": "%s ist nun Zuschauer",
+    "calamity.startMatch.countdown.lastFiveSeconds": "%s...",
+    "calamity.startMatch.countdown": "Spiel \u25b6 beginnt in %s Sekunden",
+    "calamity.subtitle.announcer": "Ansager spricht",
+    "calamity.subtitle.eye.release": "Auge ge\u00f6ffnet",
+    "calamity.subtitle.eye.squish": "Auge zerquetscht",
+    "calamity.team.notReady.blue": "%s %s braucht noch einen Augenblick %s",
+    "calamity.team.notReady.red": "%s %s sagt Momentchen noch %s",
+    "calamity.team.ready": "%s %s ist bereit %s",
+    "calamity.troll": "%s ist in das Troll-Loch gefallen! Wie peinlich!",
+    "calamity.welcome.objective": "Ziel: Sammle gen\u00fcgend Punkte um das Punkteziel zu erreichen. Klicke %s, um Online zus\u00e4tzliche Informationen zu erhalten!",
+    "calamity.welcome": "Willkomen bei Calamity: Definitive Edition! Erstellt von Moesh.",
+    "commands.trigger.failed.unprimed": "Du kannst diesen Befehl im Moment nicht verwenden",
+    "death.attack.outOfWorld": "%1$s ist dem Unheil zum Opfer gefallen",
+    "map.author.hover.link": "Klicke um den Link anzuzeigen",
+    "map.author.name": "Moesh",
+    "map.author": "Moesh",
+    "map.name": "Calamity",
+    "spacer.brackets.left": " (%s)",
+    "spacer.colon": "%s: %s",
+    "spacer.left": " %s",
+    "spacer.middle": "%s %s",
+    "spacer.or": "%s oder %s",
+    "spacer.right": "%s ",
+    "system.message": ">>> %s",
+    "team.blue": "Blau",
+    "team.red": "Rot",
+    "team.spectator": "Zuschauer",
+    "translator.name": "McTsts, Plagiatus"
 }
