Redid menu book to improve pixel art

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -5,7 +5,7 @@
 	"arena.shattering.author": "Moesh",
 	"arena.shattering.icon": "x",
 	"arena.shattering.name": "Shattering",
-	"book.pageIndicator": "\u00a7d\u00a7ov5.0.0",
+	"book.pageIndicator": "\u00a7ov5.0.0",
 	"by.author": "by %s",
 	"calamity.book.cancelStart": "Cancel",
 	"calamity.book.forfeit": "Forfeit",
